an issue in z-index is fixed

--- a/portfolio/src/styles/About.css
+++ b/portfolio/src/styles/About.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap');
 .about-container {
     position: relative;
+    z-index: 0;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
@@ -26,6 +27,7 @@
     padding: 20px;
     border-radius: 10px;
     text-align: left;
+    z-index: 2;
 }
 
 .overlay h1 {
